# git-report

./: .gitignore  AI配置说明.md  BUILD_GUIDE.md  README.md  build.py  cleanup_dist.py  git-report.spec  main.py  pyproject.toml  requirements.txt  test_modules.py  快速开始.md
app/: bootstrap.py  dependencies.py  main.py
core/: __init__.py
core/entities/: ai_config_model.py  commit_model.py  repo_model.py
core/services/: formatter.py  git_service.py  repo_scanner.py
docs/: PACKAGING_GUIDE.md  REFACTORING_SUMMARY.md  打包体积优化指南.md
hooks/: hook-PySide6.Qt3DAnimation.py  hook-PySide6.Qt3DCore.py  hook-PySide6.Qt3DExtras.py  hook-PySide6.Qt3DInput.py  hook-PySide6.Qt3DLogic.py  hook-PySide6.Qt3DRender.py  hook-PySide6.QtBluetooth.py  hook-PySide6.QtCharts.py  hook-PySide6.QtDataVisualization.py  hook-PySide6.QtDesigner.py  hook-PySide6.QtGraphs.py  hook-PySide6.QtLocation.py  hook-PySide6.QtMultimedia.py  hook-PySide6.QtMultimediaWidgets.py  hook-PySide6.QtNfc.py  hook-PySide6.QtPdf.py  hook-PySide6.QtPdfWidgets.py  hook-PySide6.QtPositioning.py  hook-PySide6.QtQuick3D.py  hook-PySide6.QtRemoteObjects.py  hook-PySide6.QtScxml.py  hook-PySide6.QtSensors.py  hook-PySide6.QtSerialBus.py  hook-PySide6.QtSerialPort.py  hook-PySide6.QtTextToSpeech.py  hook-PySide6.QtUiTools.py  hook-PySide6.QtWebEngineCore.py  hook-PySide6.QtWebEngineQuick.py  hook-PySide6.QtWebEngineWidgets.py  hook-PySide6.QtWebSockets.py
infrastructure/: ai_client.py  config_manager.py  logger.py
infrastructure/adapters/: __init__.py  base.py  (+3 more)
ui/: __init__.py  main_window.py
utils/: resource_path.py
(+11 files in other folders)
